# Media-Manager

./: README.adoc
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/dev/jstock/media_manager/: Data.kt  DataFetcher.kt  MainActivity.kt  UI.kt
app/app/src/main/res/values/: styles.xml
app/gradle/wrapper/: gradle-wrapper.properties
server/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
server/src-tauri/: Cargo.toml  tauri.conf.json
server/src-tauri/capabilities/: migrated.json
server/src-tauri/icons/: icon.icns
server/src-tauri/src/: commands.rs  log.rs  main.rs  media.rs  state.rs  tasks.rs
server/src/app/: bindings.ts  layout.tsx  page.tsx
