[package]
name = "app"
version = "0.1.0"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.16", features = [] }

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
tauri = { version = "2.0.0-beta.19", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.53.0", features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Win32",
    "Media_Control",
    "Win32_Foundation",
    "Storage_Streams",
    "Devices",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
] }
tokio-tungstenite = "0.21.0"
specta = "=2.0.0-rc.12"
tauri-specta = { version = "=2.0.0-rc.10", features = ["javascript", "typescript"] }
hyper-tls = { version = "0.4.0-alpha.4" }
rustls-pemfile = { version = "2.0.0-alpha.2" }
tokio-util = "0.7.11"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = { version = "0.3.36", features = ["serde", "local-offset"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
